<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.movieplus.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.movieplus.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_movie"
        android:name="com.example.movieplus.ui.movies.MovieFragment"
        android:label="@string/menu_movie"
        tools:layout="@layout/fragment_movie_list" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.movieplus.ui.Favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.movieplus.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />



</navigation>