<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/Login"
            android:textColor="#03157E"
            android:textSize="50dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/Welcome"
            android:textSize="30dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:placeholderText="@string/Email"
            tools:ignore="MissingClass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:drawableStart="@android:drawable/sym_action_email"
                android:drawableTint="#0C1D78"
                android:gravity="center"
                android:hint="@string/Email"
                android:textSize="16dp"
                android:textStyle="bold"
                tools:ignore="DuplicateIds,MissingClass" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/Password"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="password_toggle"
            app:placeholderText="@string/Password"
            app:startIconCheckable="false"
            app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
            app:startIconTint="#081D90"
            tools:ignore="DuplicateIds,MissingClass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/sym_action_email"
                android:drawableTint="#0C1D78"
                android:gravity="center"
                android:textSize="16dp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:gravity="end"
            android:text="@string/Forgot"
            android:textColor="#F6FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#495FC1"
            android:onClick="login"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/Sign1"
            android:textColor="#F6FFFFFF"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/Create2"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/Or"
            android:textSize="17dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="70dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                app:srcCompat="@android:drawable/btn_star_big_on"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/image2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                app:srcCompat="@android:drawable/ic_delete"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/image1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                app:srcCompat="@android:drawable/btn_star_big_on"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>