<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ForgotPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="408dp"
                android:layout_height="245dp"
                android:layout_marginTop="40dp"
                app:srcCompat="@android:drawable/ic_lock_lock"
                tools:layout_editor_absoluteX="58dp"
                tools:layout_editor_absoluteY="71dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:gravity="center"
                android:text="@string/password"
                android:textSize="27dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:text="@string/provide"
                android:textSize="17dp"
                android:textStyle="normal" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:placeholderText="@string/Email"
                tools:ignore="MissingClass">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:drawableStart="@android:drawable/sym_action_email"
                    android:drawableTint="#0C1D78"
                    android:gravity="center"
                    android:hint="@string/Email"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    tools:ignore="DuplicateIds,MissingClass" />
            </com.google.android.material.textfield.TextInputLayout>


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="#495FC1"
                android:text="RESET PASSWORD"
                android:textColor="#FAF6F6" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="#495FC1"
                android:text="Back"
                android:textColor="#FAF6F6" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>